test/trivial/deitz/test_config_use_before_decl.good
test_config_use_before_decl.chpl:1: In function '__init_test_config_use_before_decl':
test_config_use_before_decl.chpl:1: error: 'x' used before defined
