test/trivial/deitz/test_config_use_before_decl.chpl
writeln(x);

config var x : integer = 12;

writeln(x);
